# particle-tomography

./: .gitignore  README.md  model_protein.pt  pyproject.toml  setup.py
data/: loader.py  protein_loader.py  vesicle_loader.py
data/vesicle/: README.md  init_points.npy  projections_vesicle.mat  projections_vesicle_euler_angles.mat  projections_vesicle_noisy_euler_angles.mat  projections_vesicle_noisy_onaxis-1.0_euler_angles.mat  vesicle-after_rejuv_1-particle_reconstruction.npz  vesicle-before_rejuv_1-particle_reconstruction.npz
scripts/: protein.py  vesicle.py
src/particle_tomography/: __init__.py  config.py  data.py  logging.py  model.py  plot.py  raster3d.py  runner.py  train.py  training_plan.py  utils.py
src/particle_tomography.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
