[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "particle-tomography"
version = "0.1.0"
description = "A package for 3D tomographic reconstruction using point clouds instead of voxel grids."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Tobias Pretschold", email = "tobias.pretschold@uni-jena.de" }
]
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pyvista",
  "plotly",
  "mrcfile"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
